--- a/events.html
+++ b/events.html
@@ -225,12 +225,12 @@
             }
         }
         .attractive-text {
-            font-size: 18px; /* Adjust the font size as needed */
+            font-size: 16px; /* Adjust the font size as needed */
             font-weight: bold;
             color: #2c3e50; /* Dark color for the text */
             background-color: #3b3d3d; /* Light background color */
-            padding: 10px 20px; /* Space around the text */
-            border-radius: 5px; /* Rounded corners */
+            padding: 8px 18px; /* Space around the text */
+            border-radius: 4px; /* Rounded corners */
             text-align: center; /* Center the text */
             display: inline-block; /* Make the background fit the text */
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for a 3D effect */
@@ -275,7 +275,7 @@
                         </div>
                         <div class="event-content">
                             <p> A competitive quiz testing participants' knowledge of technology, programming, history, and general awareness.</p>
-                             <p class="attractive-text">Explore more and Rgister ! </p>
+                             <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/RuYLwzLZ3cnhWdwj8" class="register-button">Register</a>
@@ -289,7 +289,7 @@
                         </div>
                         <div class="event-content">
                             <p>A coding challenge where participants will solve given programming problems.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/ywDKaem92HsA4iXz9" class="register-button">Register</a>
@@ -302,7 +302,7 @@
                         </div>
                         <div class="event-content">
                             <p> A platform for participants to present their innovative technological ideas.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/2hovX1so3q6TbduB6" class="register-button">Register</a>
@@ -315,7 +315,7 @@
                         </div>
                         <div class="event-content">
                             <p>A competition where participants will analyze and provide feedback on a given app.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/BNvpdzC2NmY1bybx6" class="register-button">Register</a>
@@ -336,7 +336,7 @@
                         </div>
                         <div class="event-content">
                             <p>A creative competition where participants will draw or sketch based on a given theme.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/PmFYQRMc24GNyHth7" class="register-button">Register</a>
@@ -349,7 +349,7 @@
                         </div>
                         <div class="event-content">
                             <p>A fun event where participants will perform short, impromptu skits or acts.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         <div class="button-group">
                             <a href="https://forms.gle/xBvxNDnwNmCmFNG69" class="register-button">Register</a>
                             <a href="https://docs.google.com/document/d/1ONvu04nB5GF-X5NEHzBEYptN4mToctCwgIXgX0hJ-II/edit?usp=sharing" class="details-button" target="_blank">Details</a>
@@ -361,7 +361,7 @@
                         </div>
                         <div class="event-content">
                             <p>A competition where participants will use photos or videos to tell a story.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/fKVaJMwyaeboNCuKA" class="register-button">Register</a>
@@ -374,7 +374,7 @@
                         </div>
                         <div class="event-content">
                             <p>An interactive game that challenges your motor skills and reflexes.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/rCA1NnamfW9pvnRo9" class="register-button">Register</a>
@@ -396,7 +396,7 @@
                         </div>
                         <div class="event-content">
                             <p>BGMI is a popular battle royale game that tests players' tactical skills and teamwork in an intense virtual environment.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/xCooB5bqKcYfUqkW8" class="register-button">Register</a>
@@ -409,7 +409,7 @@
                         </div>
                         <div class="event-content">
                             <p>Free Fire is an action-packed battle royale game where players strategize to survive and be the last one standing.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/oMAYQCEBCRcXYXwV6" class="register-button">Register</a>
@@ -422,7 +422,7 @@
                         </div>
                         <div class="event-content">
                             <p>Sudoku is a number puzzle game that sharpens logical thinking and problem-solving skills</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/MycLf2vdVhPZRWBZ6" class="register-button">Register</a>
@@ -435,7 +435,7 @@
                         </div>
                         <div class="event-content">
                             <p>Housie is a fun and engaging game of chance that combines strategy and luck in a competitive setting</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/4E8HTYaKLKAYsPRMA" class="register-button">Register</a>
@@ -448,7 +448,7 @@
                         </div>
                         <div class="event-content">
                             <p>Ludo is a traditional board game of luck and strategy, bringing players together in a race to the finish.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/Z3YJCA7jMrMUuo6S7" class="register-button">Register</a>
@@ -461,7 +461,7 @@
                         </div>
                         <div class="event-content">
                             <p>Chess is a classic board game that challenges players’ strategic thinking and foresight in a battle of wits.</p>
-                            <p class="attractive-text">Explore more and Rgister ! </p>
+                            <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
                             <a href="https://forms.gle/c7NVqNNa8Zpgjtx27" class="register-button">Register</a>
