--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="aiml_logo.png" alt="College Logo">
+                <img src="aiml_logo.png" alt="College Logo"><br>
             </div>
             <nav class="navbar">
                 <ul class="nav-links">
@@ -27,13 +27,14 @@
     </header>
 
     <div class="scrolling-banner">
-    <p>Welcome to Avirbhav-2k24! Our fest dates are September 12-13, 2024. <a href="brochure.jpg" download>Click here to download our brochure</a></p>
-    </div>
+        <p>Welcome to Avirbhav-2k24! Our fest dates are September 12-13, 2024. <a href="brochure.jpg" download>Click here to download our brochure</a></p>
+        </div>
+    
 
     <section id="home" class="hero-section" data-aos="fade-in">
         <div class="hero-video-container">
             <video autoplay muted loop id="background-video">
-                <source src="video.mp4" type="video/mp4">
+                <source src="bg1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
@@ -53,6 +54,15 @@
             <p>
                 Avirbhav is our annual fest packed with fun, creativity, and excitement! Whether you love tech, art, or games, there’s something for everyone. Show off your skills in our <strong>Technical Events</strong> with coding challenges, hackathons, and tech quizzes. For those who enjoy the arts, our <strong>Non-Technical Events</strong> feature cultural performances, debates, and creative competitions that let you shine. And if you’re here for the thrill, dive into our Games and Fun section with <strong>e-sports</strong>, traditional games, and activities that bring everyone together for a good time. Join us at Avirbhav for a day full of learning, competition, and endless fun—you won’t want to miss it!
             </p>
+        </div>
+    </section>
+    <section class="video-section">
+        <h2></h2>
+        <div class="video-container">
+            <video controls>
+                <source src="video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
     </section>
 
