--- a/events.html
+++ b/events.html
@@ -350,6 +350,7 @@
                         <div class="event-content">
                             <p>A fun event where participants will perform short, impromptu skits or acts.</p>
                             <p class="attractive-text">Explore more and Register ! </p>
+                        </div>
                         <div class="button-group">
                             <a href="https://forms.gle/xBvxNDnwNmCmFNG69" class="register-button">Register</a>
                             <a href="https://docs.google.com/document/d/1ONvu04nB5GF-X5NEHzBEYptN4mToctCwgIXgX0hJ-II/edit?usp=sharing" class="details-button" target="_blank">Details</a>
