--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
                 <p> G.KARTHIK BHASKAR <br><span>Phone: +91 8099963336</span></p>
                 <p>L.MEGHA SYAM <br><span>Phone: +91 9573304843</span></p>
                 <p>KUMAR RUDRA <br><span>Phone: +91 9063360596</span></p>
-                <p> KOUSHIK <br><span>Phone: +91 XXXXXXXXXX</span></p>
+                <p> T.KOUSHIK KUMAR <br><span>Phone: +91 6304944958</span></p>
             </div>
         </div>
     </div>
