--- a/events.html
+++ b/events.html
@@ -521,9 +521,8 @@
     <!-- Footer Section -->
     <footer class="footer">
         <ul class="social-media">
-           
-            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/ieee-cis-student-branch-chapter-swarnandhra/posts/?feedView=all"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.instagram.com/avirbhav2k24?igsh=d3BsbmJnbHNoamgx"><i class="fab fa-instagram"></i></a></li>
         </ul>
         <p>&copy; 2024 AVIRBHAV. All rights reserved.</p>
     </footer>
