--- a/index.html
+++ b/index.html
@@ -56,13 +56,17 @@
             </p>
         </div>
     </section>
-    <section class="video-section">
-        <h2></h2>
-       <div class="video-container">
-            
-                <iframe width="450" height="315" src="https://www.youtube.com/embed/P8Y3e9Vl9ic?si=IV4UGQyC466T19Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                Your browser does not support the video tag.
-           
+   <section class="video-section">
+        <h2>Watch Our Video</h2>
+        <div class="video-container">
+            <iframe 
+                src="https://www.youtube.com/embed/P8Y3e9Vl9ic?autoplay=1&loop=1&playlist=P8Y3e9Vl9ic" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+            </iframe>
         </div>
     </section>
 
