--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="video-overlay"></div>
             <div class="hero-content">
                 <img src="fest1.png" alt="Avirbhav Banner" id="header-title">
-                <p>Join us for a week of excitement, learning, and fun!</p>
+                <p>Join us Avirbhav Events and Register</p>
                 <div class="hero-buttons">
                     <a href="events.html" class="btn">Explore Events</a>
                 </div>
