--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
     <section id="home" class="hero-section" data-aos="fade-in">
         <div class="hero-video-container">
-            <!-- <video autoplay muted loop id="background-video">
+             <video autoplay muted loop id="background-video">
                 <source src="bg1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
-            </video> -->
+            </video> 
             <div class="video-overlay"></div>
             <div class="hero-content">
                 <img src="fest1.png" alt="Avirbhav Banner" id="header-title">
