--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="home" class="hero-section" data-aos="fade-in">
         <div class="hero-video-container">
              <video autoplay muted loop id="background-video">
-                <source src="bg1.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video> 
             <div class="video-overlay"></div>
