--- a/events.html
+++ b/events.html
@@ -401,7 +401,8 @@
                             <h3>Visual Tales  Contest</h3>
                         </div>
                         <div class="event-content">
-                            <p>A competition where participants will use photos or videos to tell a story.</p>
+                            <p>Photography and videography contest.</p>
+                            <p>Every picture/video you take tells us a story</p>
                             <p class="attractive-text">Explore more and Register ! </p>
                         </div>
                         <div class="button-group">
