--- a/events.html
+++ b/events.html
@@ -524,6 +524,11 @@
         <ul class="social-media">
             <li><a href="https://www.linkedin.com/company/ieee-cis-student-branch-chapter-swarnandhra/posts/?feedView=all"><i class="fab fa-linkedin-in"></i></a></li>
             <li><a href="https://www.instagram.com/avirbhav2k24?igsh=d3BsbmJnbHNoamgx"><i class="fab fa-instagram"></i></a></li>
+            <li>
+                    <a href="https://www.youtube.com/@Avirbhav_2K24/videos">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
         </ul>
         <p>&copy; 2024 AVIRBHAV. All rights reserved.</p>
     </footer>
