--- a/contact.html
+++ b/contact.html
@@ -172,9 +172,10 @@
             <div id="main-coordinator-list" class="coordinator-list">
                 <p> U.N.V.RAVI TEJA <br><span>Phone: +91 7013666788</span></p>
                 <p> G.KARTHIK BHASKAR <br><span>Phone: +91 8099963336</span></p>
+                <p> K.BHANU TEJA <br><span>Phone: +91 9502647676</span></p>
                 <p>L.MEGHA SYAM <br><span>Phone: +91 9573304843</span></p>
                 <p>KUMAR RUDRA <br><span>Phone: +91 9063360596</span></p>
-                <p> T.KOUSHIK KUMAR <br><span>Phone: +91 6304944958</span></p>
+                <p> KOUSHIK <br><span>Phone: +91 XXXXXXXXXX</span></p>
             </div>
         </div>
     </div>
@@ -185,8 +186,8 @@
         <div class="sub-category" onclick="toggleList('list1')">
             <h2>Tech Showdowns</h2>
             <div id="list1" class="coordinator-list">
-                <p> PRANEETH VASA<br><span>Phone:+91 8328571819</span></p>
-                <p> NEERAJA KANNA<br><span>Phone: +91 8106990656</span></p>
+                <p> V.P.PRANEETH <br><span>Phone:+91 8328571819</span></p>
+                <p> K.NEERAJA <br><span>Phone: +91 8106990656</span></p>
                 <p> M.JYOTHI<br><span>Phone: +91 9381131378</span></p>
                 <p> LIKITH <br><span>Phone: +91 7893789031</span></p>
             </div>
@@ -221,7 +222,7 @@
         <div class="sub-category" onclick="toggleList('list4')">
             <h2>Cultural Coordinators</h2>
             <div id="list4" class="coordinator-list">
-                <p> K.BHANU TEJA <br><span>Phone: +91 9502647676</span></p>
+                <p>Shanmukh Sai<br><span>Phone: +91 7207435349</span></p>
                 <p> V.S.C.YESAWINI<br><span>Phone: +91 7989193698</span></p>
                 <p> M.S.R.CHANDRIKA <br><span>Phone: +91 9642416755</span></p>
                 <p> A.HEMANTH <br><span>Phone: +91 9032837064</span></p>
