--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
    <section class="video-section">
         <h2>Watch Our Video</h2>
         <div class="video-container">
-            <iframe 
-                src="https://www.youtube.com/embed/P8Y3e9Vl9ic?autoplay=1&loop=1&playlist=P8Y3e9Vl9ic" 
-                title="YouTube video player" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" 
-                allowfullscreen>
-            </iframe>
+           <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/TGnHUDlxPFo?si=KejaiTCbc40gcAfA&autoplay=1&loop=1&playlist=TGnHUDlxPFo"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
         </div>
     </section>
 
