--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
