--- a/contact.html
+++ b/contact.html
@@ -155,6 +155,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
