--- a/events.html
+++ b/events.html
@@ -294,6 +294,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#events">Events</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
