--- a/contact.html
+++ b/contact.html
@@ -187,8 +187,8 @@
         <div class="sub-category" onclick="toggleList('list1')">
             <h2>Tech Showdowns</h2>
             <div id="list1" class="coordinator-list">
-                <p> V.P.PRANEETH <br><span>Phone:+91 8328571819</span></p>
-                <p> K.NEERAJA <br><span>Phone: +91 8106990656</span></p>
+                <p> PRANEETH VASA <br><span>Phone:+91 8328571819</span></p>
+                <p> NEERAJA KANNA <br><span>Phone: +91 8106990656</span></p>
                 <p> M.JYOTHI<br><span>Phone: +91 9381131378</span></p>
                 <p> LIKITH <br><span>Phone: +91 7893789031</span></p>
             </div>
