--- a/schedule.html
+++ b/schedule.html
@@ -12,162 +12,180 @@
     <!-- AOS (Animate on Scroll) CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <style>
- /* Global Styles */
-/* Global Styles */
-body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #121212;
-    color: #e0e0e0;
-    margin: 0;
-    padding: 0;
-}
+        /* Global Styles */
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #121212;
+            color: #e0e0e0;
+            margin: 0;
+            padding: 0;
+        }
 
-/* Header Styling */
-.header {
-    background-color: #111;
-    padding: 10px 0;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-}
+        /* Header Styling */
+        .header {
+            background-color: #111;
+            padding: 10px 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-direction: column;
+        }
 
-/* Container for Header Elements */
-.container {
-    width: 85%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-}
+        /* Container for Header Elements */
+        .container {
+            width: 85%;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-direction: column;
+        }
 
-/* Navigation Bar Styling */
-.navbar {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-}
+        /* Navigation Bar Styling */
+        .navbar {
+            display: flex;
+            gap: 10px;
+            margin-top: 10px;
+        }
 
-/* Navigation Links */
-.nav-links {
-    list-style-type: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
-    padding: 0;
-}
+        /* Navigation Links */
+        .nav-links {
+            list-style-type: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+        }
 
-.nav-links li a {
-    text-decoration: none;
-    font-weight: 600;
-    color: #fff;
-    transition: color 0.3s ease;
-}
+        .nav-links li a {
+            text-decoration: none;
+            font-weight: 600;
+            color: #fff;
+            transition: color 0.3s ease;
+        }
 
-.nav-links li a:hover {
-    color: #7D3C98;
-}
+        .nav-links li a:hover {
+            color: #7D3C98;
+        }
 
-/* Logo Styling */
-.logo img {
-    max-height: 50px;
-}
+        /* Logo Styling */
+        .logo img {
+            max-height: 50px;
+        }
 
-/* Main Page Styling */
-.schedule-page {
-    padding: 20px;
-    text-align: center;
-}
+        /* Main Page Styling */
+        .schedule-page {
+            padding: 40px 20px;
+            text-align: center;
+        }
 
-/* Heading Styling */
-h1 {
-    color: #ffffff;
-    margin-bottom: 20px;
-    text-shadow: 0 0 10px #00adb5, 0 0 20px #00adb5;
-}
+        /* Heading Styling */
+        h1 {
+            color: #ffffff;
+            margin-bottom: 20px;
+            text-shadow: 0 0 10px rgba(0, 173, 181, 0.5), 0 0 20px rgba(0, 173, 181, 0.5);
+            font-size: 2em;
+            border-bottom: 2px solid #00adb5;
+            display: inline-block;
+            padding-bottom: 10px;
+        }
 
-/* Table Container for Responsiveness */
-.table-container {
-    overflow-x: auto; /* Allows horizontal scrolling on smaller screens */
-    margin: 0 auto;
-    padding: 0 10px; /* Adds slight padding on smaller devices */
-}
+        /* Table Container for Responsiveness */
+        .table-container {
+            overflow-x: auto; /* Allows horizontal scrolling on smaller screens */
+            margin: 0 auto;
+            padding: 0 10px; /* Adds slight padding on smaller devices */
+        }
 
-/* Table Styling */
-.schedule-table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: #1e1e1e;
-    color: #e0e0e0;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-    margin: 20px 0;
-}
+        /* Table Styling */
+        .schedule-table {
+            width: 100%;
+            border-collapse: collapse;
+            background-color: #1e1e1e;
+            color: #e0e0e0;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            margin: 20px 0;
+            border-radius: 8px;
+            overflow: hidden;
+        }
 
-/* Table Headers and Cells */
-.schedule-table th,
-.schedule-table td {
-    border: 1px solid #333;
-    padding: 12px 20px;
-    text-align: center;
-    font-size: 0.9em;
-}
+        /* Table Headers and Cells */
+        .schedule-table th,
+        .schedule-table td {
+            border: 1px solid #333;
+            padding: 15px 20px;
+            text-align: center;
+            font-size: 1em;
+            transition: all 0.3s ease;
+        }
 
-/* Table Headers */
-.schedule-table th {
-    background-color: #333;
-    color: #ffcc00;
-    font-weight: 700;
-}
+        /* Table Headers */
+        .schedule-table th {
+            background-color: #333;
+            color: #ffcc00;
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
 
-/* Hover Effect on Table Rows */
-.schedule-table tr:hover {
-    background-color: #2a2a2a;
-}
+        /* Hover Effect on Table Rows */
+        .schedule-table tr:hover {
+            background-color: #2a2a2a;
+            transform: scale(1.01);
+            box-shadow: 0 0 10px rgba(255, 204, 0, 0.5);
+        }
 
-/* Footer Styling */
-.footer {
-    background-color: #111;
-    padding: 20px 0;
-    color: #fff;
-    text-align: center;
-}
+        /* Register Button Styling */
+        .register-button {
+            background-color: #ff6600; /* Orangish color */
+            color: #121212;
+            padding: 8px 15px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: background-color 0.3s ease;
+        }
 
-/* Footer Text */
-.footer p {
-    margin-top: 10px;
-    font-size: 0.9em;
-}
+        .register-button:hover {
+            background-color: #cc5200; /* Darker orangish color */
+            color: #fff;
+        }
 
-/* Responsive Design for Mobile */
-@media (max-width: 768px) {
-    .schedule-table th,
-    .schedule-table td {
-        padding: 10px;
-        font-size: 0.8em;
-    }
-
-    .schedule-page {
-        padding: 15px;
-    }
-}
-
-
+        /* Footer Styling */
         .footer {
             background-color: #111;
             padding: 20px 0;
             color: #fff;
             text-align: center;
+            border-top: 1px solid #333;
         }
 
+        /* Footer Text */
         .footer p {
             margin-top: 10px;
             font-size: 0.9em;
         }
 
+        /* Responsive Design for Mobile */
+        @media (max-width: 768px) {
+            .schedule-table th,
+            .schedule-table td {
+                padding: 10px;
+                font-size: 0.9em;
+            }
+
+            .schedule-page {
+                padding: 20px;
+            }
+
+            h1 {
+                font-size: 1.5em;
+            }
+        }
     </style>
 </head>
 <body>
@@ -195,6 +213,7 @@ h1 {
                     <th>Venue</th>
                     <th>Timing</th>
                     <th>Category</th>
+                    <th>Register</th>
                 </tr>
             </thead>
             <tbody>
@@ -203,36 +222,42 @@ h1 {
                     <td>AIML Block Lab-5</td>
                     <td>9:30 AM</td>
                     <td>Tech Showdowns</td>
+                    <td><a href="https://forms.gle/uMHjNW843nkS64hSA" class="register-button" target="_blank">Register</a></td>
                 </tr>
                 <tr>
                     <td>Art Attack</td>
                     <td>AIML Block</td>
                     <td>10:00 AM</td>
                     <td>Chill Zone</td>
+                    <td><a href="https://forms.gle/VS7z1iYBuTXqxpHCA" class="register-button" target="_blank">Register</a></td>
                 </tr>
                 <tr>
                     <td>Idea Infusion</td>
                     <td>AIML Block Lab1</td>
                     <td>11:00 AM</td>
                     <td>Tech Showdowns</td>
+                    <td><a href="https://forms.gle/zyNnp624kBWC7cE26" class="register-button" target="_blank">Register</a></td>
                 </tr>
                 <tr>
                     <td>Chess</td>
                     <td>AIML Block Seminar Hall</td>
                     <td>1:30 PM</td>
                     <td>Game Zone</td>
+                    <td><a href="https://forms.gle/JFkMW9dB85gCb1zW6" class="register-button" target="_blank">Register</a></td>
                 </tr>
                 <tr>
                     <td>Sudoku</td>
                     <td>AIML Block Seminar Hall</td>
                     <td>2:00 PM</td>
                     <td>Game Zone</td>
+                    <td><a href="https://forms.gle/Dsuf8vpHkqiEgC4J9" class="register-button" target="_blank">Register</a></td>
                 </tr>
                 <tr>
                     <td>App Critique</td>
                     <td>AIML Block Lab1</td>
                     <td>2:30 PM</td>
                     <td>Tech Showdowns</td>
+                    <td><a href="https://forms.gle/PErxN3z1siY4Qt3H7" class="register-button" target="_blank">Register</a></td>
                 </tr>
             </tbody>
         </table>
