--- a/schedule.html
+++ b/schedule.html
@@ -30,32 +30,32 @@
             z-index: 1000;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
             flex-direction: column;
+            border-bottom: 1px solid #333;
         }
 
         /* Container for Header Elements */
         .container {
-            width: 85%;
-            margin: 0 auto;
+            width: 90%;
+            max-width: 1200px;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            flex-direction: column;
+            flex-wrap: wrap;
         }
 
         /* Navigation Bar Styling */
         .navbar {
             display: flex;
             gap: 10px;
-            margin-top: 10px;
         }
 
         /* Navigation Links */
         .nav-links {
             list-style-type: none;
             display: flex;
-            gap: 20px;
+            gap: 15px;
             margin: 0;
             padding: 0;
         }
@@ -116,10 +116,11 @@
         .schedule-table th,
         .schedule-table td {
             border: 1px solid #333;
-            padding: 15px 20px;
+            padding: 12px 8px;
             text-align: center;
-            font-size: 1em;
+            font-size: 0.9em;
             transition: all 0.3s ease;
+            word-break: break-word; /* Breaks long words to prevent overflow */
         }
 
         /* Table Headers */
@@ -142,12 +143,13 @@
         .register-button {
             background-color: #ff6600; /* Orangish color */
             color: #121212;
-            padding: 8px 15px;
+            padding: 8px 12px;
             border: none;
             border-radius: 5px;
             text-decoration: none;
             font-weight: 600;
             transition: background-color 0.3s ease;
+            display: inline-block;
         }
 
         .register-button:hover {
@@ -158,7 +160,7 @@
         /* Footer Styling */
         .footer {
             background-color: #111;
-            padding: 20px 0;
+            padding: 20px 10px;
             color: #fff;
             text-align: center;
             border-top: 1px solid #333;
@@ -166,7 +168,7 @@
 
         /* Footer Text */
         .footer p {
-            margin-top: 10px;
+            margin: 10px 0 0;
             font-size: 0.9em;
         }
 
@@ -175,7 +177,7 @@
             .schedule-table th,
             .schedule-table td {
                 padding: 10px;
-                font-size: 0.9em;
+                font-size: 0.8em;
             }
 
             .schedule-page {
@@ -184,6 +186,37 @@
 
             h1 {
                 font-size: 1.5em;
+            }
+
+            .register-button {
+                padding: 6px 10px;
+                font-size: 0.8em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .nav-links {
+                flex-direction: column;
+                gap: 10px;
+                text-align: center;
+            }
+
+            .register-button {
+                padding: 5px 8px;
+                font-size: 0.7em;
+            }
+
+            .header {
+                padding: 10px;
+            }
+
+            .logo img {
+                max-height: 40px;
+            }
+
+            .container {
+                flex-direction: column;
+                align-items: center;
             }
         }
     </style>
@@ -206,61 +239,63 @@
 
     <main class="schedule-page">
         <h1>Avirbhav TechFest 10th September Schedule of Events</h1>
-        <table class="schedule-table">
-            <thead>
-                <tr>
-                    <th>Event</th>
-                    <th>Venue</th>
-                    <th>Timing</th>
-                    <th>Category</th>
-                    <th>Register</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Technical Quiz</td>
-                    <td>AIML Block Lab-5</td>
-                    <td>9:30 AM</td>
-                    <td>Tech Showdowns</td>
-                    <td><a href="https://forms.gle/uMHjNW843nkS64hSA" class="register-button" target="_blank">Register</a></td>
-                </tr>
-                <tr>
-                    <td>Art Attack</td>
-                    <td>AIML Block</td>
-                    <td>10:00 AM</td>
-                    <td>Chill Zone</td>
-                    <td><a href="https://forms.gle/VS7z1iYBuTXqxpHCA" class="register-button" target="_blank">Register</a></td>
-                </tr>
-                <tr>
-                    <td>Idea Infusion</td>
-                    <td>AIML Block Lab1</td>
-                    <td>11:00 AM</td>
-                    <td>Tech Showdowns</td>
-                    <td><a href="https://forms.gle/zyNnp624kBWC7cE26" class="register-button" target="_blank">Register</a></td>
-                </tr>
-                <tr>
-                    <td>Chess</td>
-                    <td>AIML Block Seminar Hall</td>
-                    <td>1:30 PM</td>
-                    <td>Game Zone</td>
-                    <td><a href="https://forms.gle/JFkMW9dB85gCb1zW6" class="register-button" target="_blank">Register</a></td>
-                </tr>
-                <tr>
-                    <td>Sudoku</td>
-                    <td>AIML Block Seminar Hall</td>
-                    <td>2:00 PM</td>
-                    <td>Game Zone</td>
-                    <td><a href="https://forms.gle/Dsuf8vpHkqiEgC4J9" class="register-button" target="_blank">Register</a></td>
-                </tr>
-                <tr>
-                    <td>App Critique</td>
-                    <td>AIML Block Lab1</td>
-                    <td>2:30 PM</td>
-                    <td>Tech Showdowns</td>
-                    <td><a href="https://forms.gle/PErxN3z1siY4Qt3H7" class="register-button" target="_blank">Register</a></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-container">
+            <table class="schedule-table">
+                <thead>
+                    <tr>
+                        <th>Event</th>
+                        <th>Venue</th>
+                        <th>Timing</th>
+                        <th>Category</th>
+                        <th>Register</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Technical Quiz</td>
+                        <td>AIML Block Lab-5</td>
+                        <td>9:30 AM</td>
+                        <td>Tech Showdowns</td>
+                        <td><a href="https://forms.gle/uMHjNW843nkS64hSA" class="register-button" target="_blank">Register</a></td>
+                    </tr>
+                    <tr>
+                        <td>Art Attack</td>
+                        <td>AIML Block</td>
+                        <td>10:00 AM</td>
+                        <td>Chill Zone</td>
+                        <td><a href="https://forms.gle/VS7z1iYBuTXqxpHCA" class="register-button" target="_blank">Register</a></td>
+                    </tr>
+                    <tr>
+                        <td>Idea Infusion</td>
+                        <td>AIML Block Lab1</td>
+                        <td>11:00 AM</td>
+                        <td>Tech Showdowns</td>
+                        <td><a href="https://forms.gle/zyNnp624kBWC7cE26" class="register-button" target="_blank">Register</a></td>
+                    </tr>
+                    <tr>
+                        <td>Chess</td>
+                        <td>AIML Block Seminar Hall</td>
+                        <td>1:30 PM</td>
+                        <td>Game Zone</td>
+                        <td><a href="https://forms.gle/JFkMW9dB85gCb1zW6" class="register-button" target="_blank">Register</a></td>
+                    </tr>
+                    <tr>
+                        <td>Sudoku</td>
+                        <td>AIML Block Seminar Hall</td>
+                        <td>2:00 PM</td>
+                        <td>Game Zone</td>
+                        <td><a href="https://forms.gle/Dsuf8vpHkqiEgC4J9" class="register-button" target="_blank">Register</a></td>
+                    </tr>
+                    <tr>
+                        <td>App Critique</td>
+                        <td>AIML Block Lab1</td>
+                        <td>2:30 PM</td>
+                        <td>Tech Showdowns</td>
+                        <td><a href="https://forms.gle/PErxN3z1siY4Qt3H7" class="register-button" target="_blank">Register</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="footer">
