--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="winners.html">Schedule</a></li>
                 </ul>
             </nav>
         </div>
