--- a/events.html
+++ b/events.html
@@ -293,9 +293,10 @@
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#events">Events</a></li>
+                    
                     <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="winners.html">Schedule</a></li>
                 </ul>
             </nav>
         </div>
