--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="events.html">Events</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="winners.html">Schedule</a></li>
                 </ul>
             </nav>
         </div>
