--- a/schedule.html
+++ b/schedule.html
@@ -231,7 +231,9 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="winners.html">Schedule</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
+                    
                 </ul>
             </nav>
         </div>
