--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="events.html">Events</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
-                     <li><a href="winners.html">Schedule</a></li>
+                     <li><a href="winners.html">Winners</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                    
                 </ul>
