--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events</a></li>
-                     <li><a href="winners.html">Schedule</a></li>
+                     <li><a href="winners.html">Winners</a></li>
                     <li><a href="schedule.html">Schedule</a></li>
                    
                 </ul>
