--- a/events.html
+++ b/events.html
@@ -295,7 +295,7 @@
                     <li><a href="index.html">Home</a></li>
                     
                     <li><a href="schedule.html">Schedule</a></li>
-                    <li><a href="winners.html">Schedule</a></li>
+                    <li><a href="winners.html">Winners</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     
                 </ul>
